# whagent

./: .env.example  .gitignore  README.md  doc.md  docker-compose.yml  docker-stack.yml  requirements-dev.txt
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  scratch_evo_send.py
backend/alembic/: env.py
backend/alembic/versions/: 202605010001_initial.py  202605040001_initial_whagent.py  202605070001_add_cascade_deletes.py  202605070002_normalize_cascade_fk_constraints.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  prompts.py  tools.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: auth.py  conversations.py  customers.py  dashboard.py  debug.py  internal.py  leads.py  setup.py  store.py  users.py  webhooks.py  whatsapp_instances.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  agent_run.py  base.py  conversation.py  customer.py  handoff_event.py  lead.py  message.py  salesperson.py  store.py  user.py  whatsapp_instance.py
backend/app/schemas/: auth.py  conversations.py  crud.py  dashboard.py  debug.py  webhook.py
backend/app/services/: agent_service.py  auth_service.py  conversation_processing_service.py  conversation_queue.py  conversation_queue_service.py  conversation_service.py  crm_mock_client.py  evolution_service.py  evolution_webhook_service.py  handoff_service.py  message_origin_policy.py  runtime_state.py  webhook_parser.py
backend/app/utils/: __init__.py  datetime.py  phone.py
backend/docs/: data-lifecycle.md
backend/scripts/: agent_chat.py  bootstrap_admin.py  seed_demo_data.py
backend/tests/: conftest.py  integration_test_deletes.py  test_auth.py  test_dashboard_api.py  test_handoff.py  test_health_auth_models.py  test_internal_processing.py  test_parser_policy_queue_clients.py  test_webhook.py  test_webhook_processing_handoff_debug.py
crm-mock/: Dockerfile  README.md  pyproject.toml
crm-mock/app/: __init__.py  main.py  routes.py  schemas.py
crm-mock/app/data/: __init__.py  salespeople.py  stores.py  vehicles.py
crm-mock/tests/: test_api.py
docs/: 01-visao-geral.md  02-arquitetura.md  03-fluxo-whatsapp-evolution.md  04-agente-ia.md  04-redis-workers-debounce.md  05-agente-ia.md  05-crm-mock.md  06-crm-mock.md  06-modelo-dados.md  07-auth-jwt.md  07-modelo-dados.md  08-auth-jwt.md  08-handoff-humano.md  09-handoff-humano.md  09-redis-workers-debounce.md  10-debug-local.md  10-roadmap.md  11-redis-workers-debounce.md  11-roadmap.md  docker-swarm.md  prompt_inicial.md
evolution/: .env.example  README.md  docker-compose.yml
frontend/: .dockerignore  Dockerfile  README.md  next-env.d.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/components/: WhagentApp.tsx  app-shell.tsx  auth-screens.tsx  toaster.tsx  ui.tsx
frontend/hooks/: use-action.ts  use-session.tsx  use-toast.ts
frontend/public/: .gitkeep
scripts/: build-images.sh  deploy-stack.sh  logs.sh
workers/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
workers/app/: __init__.py  main.py  worker.py
workers/app/core/: config.py
workers/app/services/: backend_client.py  conversation_queue.py  redis_queue.py
workers/app/workers/: __init__.py  conversation_processor.py
workers/tests/: test_queue.py  test_worker.py
(+22 files in other folders)
