[project]
name = "car-agent-backend"
version = "0.1.0"
description = "Backend FastAPI for WhatsApp car sales AI agent SaaS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "bcrypt>=4.0.0",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.8.0",
  "openai>=1.68.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"
