[project]
name = "whagent-workers"
version = "0.1.0"
description = "Workers Redis do Whagent"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"
